--- a/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.scss
+++ b/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.scss
@@ -11,13 +11,20 @@
  align-self: flex-end;
 }
 
+.container-fluid{
+  background-color: #FFFFFF;
+  border-radius: 12px;
+  padding-top: 15px;
+  min-height: 80vh;
+}
+
 .btn_submit{
   border: 0px;
   border-radius: 5px;
   height: 33px;
   box-sizing: border-box;
   color: white;
-  background-color: #106DB6;
+  background-color: #0041C4;
   font-size: 13px;
   margin: 0 10px;
 }
@@ -40,7 +47,7 @@
 border-collapse: collapse;
 width: 100%;
 font-size: 13px;
-font-family: font_lexend_deca;
+// font-family: font_lexend_deca;
 }
 #table td, #table th {
 //border: 1px solid #ddd;
@@ -53,8 +60,9 @@ padding: 8px;
 
 #table th {
 //text-align: center;
-background-color: #E2ECF6;
-color: #106DB6;
+background-color: #EBF2FB;
+color: #8E9AB0;
+font-weight: 500;
 }
 
 #table tr:last-child th:first-child {
@@ -73,7 +81,7 @@ border-bottom-right-radius: 10px;
 :host ::ng-deep {
 .p-calendar {
   font-size: 13px !important;
-  font-family: 'font_lexend_deca';
+  // font-family: 'font_lexend_deca';
   width: 100%;
 }
 .p-datepicker table td {
@@ -101,7 +109,7 @@ border-bottom-right-radius: 10px;
 :host ::ng-deep {
 .p-calendar {
   font-size: 13px !important;
-  font-family: 'font_lexend_deca';
+  // font-family: 'font_lexend_deca';
   width: 100%;
 }
 .p-datepicker table td {
