--- a/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
+++ b/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container-fluid">
   <div class="row">
     <!--Tổ chức-->
     <div class="col-md-2">
@@ -43,7 +43,7 @@
 
   <!--Bảng dữ liệu-->
   <div class="row" style="padding-top: 30px;">
-    <p-table #dt [value]="list" [paginator]="true" [rows]="10" id="table" [autoLayout]="true">
+    <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true">
 
       <!--header-->
       <ng-template pTemplate="header">
@@ -71,7 +71,7 @@
         </tr>
       </ng-template>
 
-      <ng-template pTemplate="paginatorleft" let-state>
+      <!-- <ng-template pTemplate="paginatorleft" let-state>
         <span style="color: white !important;">{{'chart.number' | translate}}: {{state.first <= 0 && state.totalRecords
             <=1? 0:state.first + 1}} - {{(state.first+state.rows)> state.totalRecords ? (state.totalRecords > 0 ?
             state.totalRecords - 1 : 0) : state.first+state.rows}} / {{state.totalRecords > 0 ? state.totalRecords - 1 :
@@ -84,9 +84,28 @@
             state.totalRecords ?(state.totalRecords > 0 ? state.totalRecords : 0) : state.first+state.rows}} /
             {{state.totalRecords > 0 ? state.totalRecords : 0}}
         </span>
-      </ng-template>
+      </ng-template> -->
     </p-table>
   </div>
+</div>
+
+<div class="footer_pagination">
+  <div class="footer_contract_per_page">
+    <div>Hiển thị&nbsp;</div>
+    <select [(ngModel)]="this.row" (change)="changePageNumber($event)">
+        <option value="" hidden>10</option>
+        <option *ngFor="let d of this.pageOptions">{{d}}</option>
+    </select>
+    <div>&nbsp;{{'contracts.per.page' | translate}}</div>
+  </div>
+  <div class = "footer_pagination_between">
+      <p-paginator class="footer_pagination_between_p_paginator" [first]="page * row"  (onPageChange)="onPageChange($event)" [rows]="row" [totalRecords]="totalRecords"></p-paginator>
+      <div *ngIf = "totalRecords" class="enterPage footer_pagination_between_input">
+          <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+          <p>của {{numberPage}} trang</p>
+      </div>
+  </div>
+  <div class="footer_pagination_quantity">{{'chart.number' | translate}}: {{totalRecords === 0 ? 0 : page * row + 1}} - {{totalRecords > 0 ? toRecord() : 0}} / {{totalRecords > 0 ? totalRecords : 0}}</div>
 </div>
 
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
