Sửa lỗi thông báo: chưa chạy hết thông báo đã quay lại từ đầu

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="warning-container">
         <div class="warning-scroll">
-          <div *ngIf = 'messageNotification' class="RightToLeft">
+          <div *ngIf = 'messageNotification' class="RightToLeft" #scrollingText>
             {{messageNotification}}
           </div>
         </div>
