fix thông báo delay 30s + giảm tg tóc độ chạy thông báo

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -337,11 +337,12 @@ h3{
 .RightToLeft {
   color: red;
   font-size: 14px;
+  --start-position: 100%;
 }
 
 @keyframes RightToLeft {
   from {
-    transform: translateX(100%);
+    transform: translateX(var(--start-position));
   }
   to {
     transform: translateX(-100%);
