--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -72,6 +72,16 @@ header {
   display: flex;
   align-items: center;
   margin: 0;
+  padding: 0 16px;
+  border-left: 2px solid#001A4D;
+  height: 24px;
+}
+
+.search-wrapper-label {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 .social-icons {
@@ -165,6 +175,12 @@ h3{
 }
 .img_icon{
   width: 18px;
+  cursor: pointer;
+}
+
+.img_icon_caret-down {
+  width: 24px;
+  height: 24px;
   cursor: pointer;
 }
 
