[21_05_2024 - FE] Update giao diện thêm BG & thay đổi màu button các màn khi tạo & ký HĐ

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -187,6 +187,16 @@
   }
 }
 
+.container-fluid{
+  background-color: #FFFFFF;
+  border-radius: 12px;
+  padding-top: 15px;
+  min-height: 92vh;
+}
+
+.my-custom-cancel-button-class {
+  color: red !important; /* Thay đổi màu chữ theo ý bạn, ví dụ: màu đỏ */
+}
 // test
 .ck-da-keo {
   border: 1px solid #106DB6;
