--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -32,7 +32,7 @@
     </a>
 
     <div>
-      <button *ngIf="!this.is_show_coordination && ![2,3,4].includes(this.datas.roleContractReceived) && !view" type="button" name="next" class="next action-button" (click)="refuseContract()" style="background-color: #8B8B8B">{{'contract.status.fail' | translate}}</button>
+      <button *ngIf="!this.is_show_coordination && ![2,3,4].includes(this.datas.roleContractReceived) && !view" type="button" name="next" class="next action-button-previous" (click)="refuseContract()">{{'contract.status.fail' | translate}}</button>
       <button class="next action-button" (click)="autoScroll()">{{'auto.scroll' | translate}}</button>
       <button *ngIf="this.is_show_coordination"  type="button" name="next" class="next action-button" (click)="endContract()">{{'end' | translate}}</button>
       <button *ngIf="((!this.is_show_coordination && !view) || this.datas.roleContractReceived) && this.lang == 'vi'  || !this.lang" (click)="action()" type="button" name="next" class="next action-button">{{this.datas.action_title == 'dieu_phoi' ? 'Điều phối' : 'Xác nhận'}}</button>
@@ -57,7 +57,7 @@
       <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="processingAuthorization()">{{'authorization' | translate}}</button>
       <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="forWardContract()">{{'forward' | translate}}</button>
       
-      <button *ngIf="!this.is_show_coordination && ![2,3,4].includes(this.datas.roleContractReceived) && !view" type="button" name="next" class="next action-button" (click)="refuseContract()" [ngStyle]="getStyleButton()">{{'contract.status.fail' | translate}}</button>
+      <button *ngIf="!this.is_show_coordination && ![2,3,4].includes(this.datas.roleContractReceived) && !view" type="button" name="next" class="next action-button-previous" (click)="refuseContract()" [ngStyle]="getStyleButton()">{{'contract.status.fail' | translate}}</button>
 
 
     </div>
