--- a/src/app/main/contract-signature/components/multi-sign-list/multi-sign-list.component.html
+++ b/src/app/main/contract-signature/components/multi-sign-list/multi-sign-list.component.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width" />
-
+<div class="container-fluid">
 <div class="sample-contract row">
   <!--Form thông tin chi tiết hợp đồng-->
   <div class="col-md-3 sample-contract__information" style="background-color: white">
@@ -105,3 +105,4 @@
     {{ loadingText }}
   </p>
 </ngx-spinner>
+</div>
