--- a/src/app/main/contract-signature/components/multi-sign-list/multi-sign-list.component.scss
+++ b/src/app/main/contract-signature/components/multi-sign-list/multi-sign-list.component.scss
@@ -176,7 +176,12 @@
       margin-left: -10px;
     }
   }
-  
+  .container-fluid{
+    background-color: #FFFFFF;
+    border-radius: 12px;
+    padding-top: 15px;
+    min-height: 92vh;
+  }
   // test
   .ck-da-keo {
     border: 1px solid #106DB6;
