--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="sample-contract row" *ngIf="loaded">
   <!--  information contract-->
   <div *ngIf="!this.mobile" class="col-md-3 sample-contract__information" style="background-color: white;">
@@ -162,4 +163,5 @@
           </a>
       </div>
   </div>
+</div>
 </div>
