--- a/src/app/main/contract/form-contract/confirm-contract-form/confirm-contract-form.component.html
+++ b/src/app/main/contract/form-contract/confirm-contract-form/confirm-contract-form.component.html
@@ -135,7 +135,7 @@
 </div>
 <div class="footer-infor-contract">
     <div style="width: 200px;">
-        <button (click)="back($event, 'sample-contract-form')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">{{'btn.previous' | translate}}</button>
+        <button (click)="back($event, 'sample-contract-form')" type="button" name="next" class="next action-button-previous">{{'btn.previous' | translate}}</button>
     </div>
     <div class="content_footer"></div>
     <div>
