--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -1923,8 +1923,7 @@
 
 <div class="footer-determine" style="display: flex; justify-content: space-between">
   <div style="width: 200px">
-    <button (click)="back($event, 'infor-contract-form')" type="button" name="next" class="next action-button"
-      style="background-color: #8b8b8b">
+    <button (click)="back($event, 'infor-contract-form')" type="button" name="next" class="next action-button-previous">
       {{ "btn.previous" | translate }}
     </button>
   </div>
