--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
@@ -56,23 +56,23 @@
 //style button
 .action-button {
   width: 100px;
-  background: #106DB6;
+  background: #0041C4;
   //font-weight: bold;
   color: white;
   border: 0 none;
-  border-radius: 5px;
+  border-radius: 6px;
   cursor: pointer;
-  padding: 10px 5px;
+  padding: 10px 12px;
   margin: 10px 5px;
 }
 
 .draft-button {
   width: 100px;
-  background: #FCAF17;
+  background: #F8AD41;
   //font-weight: bold;
   color: white;
   border: 0 none;
-  border-radius: 5px;
+  border-radius: 6px;
   cursor: pointer;
   padding: 10px 5px;
   margin: 10px 5px;
@@ -80,13 +80,13 @@
 
 .action-button-previous {
   width: 100px;
-  background: #C5C5F1;
+  background: #FFFFFF;
   font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 5px;
+  color: #0041C4;
+  border: 1px solid var(--Primary, #0041C4);
+  border-radius: 6px;
   cursor: pointer;
-  padding: 10px 5px;
+  padding: 9px 12px;
   margin: 10px 5px;
 }
 
