--- a/src/app/main/customer/customer.component.scss
+++ b/src/app/main/customer/customer.component.scss
@@ -290,13 +290,13 @@
     font-family: font_lexend_deca;
   }
   #table td, #table th {
-    //border: 1px solid #ddd;
+    border: 0px;
     padding: 8px;
   }
   
-  #table tr:nth-child(even){background-color: #f2f2f2;}
+  #table tr:nth-child(even){background-color: #F8FAFF;}
   
-  #table tr:hover {background-color: #ddd;}
+  #table tr:hover {background-color: #F8FAFF;}
   
   #table th {
     //text-align: center;
