--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -318,9 +318,9 @@ h3{
     min-width: 1.2rem !important;
   }
 }
-.pi-bell{
+.icon-pi{
   font-size: 20px;
-  color:#106db6
+  // color:#106db6
 }
 
 .sidebar-header-custom {
