--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="sample-contract row">
   <!--  information contract-->
   <div class="col-md-3 sample-contract__information" style="background-color: white;">
@@ -97,4 +98,4 @@
   [pageBefore]="pageBefore"
   [status]="status"
 ></app-footer-signature>
-
+</div>
