--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.scss
@@ -2,7 +2,12 @@
 //  font-family: 'SF_Dexend_deca';
 //  src: url('assets/scss/font/LexendDeca-VariableFont_wght.ttf') format('ttf');
 //}
-
+.container-fluid{
+  background-color: #FFFFFF;
+  border-radius: 12px;
+  padding-top: 15px;
+  min-height: 92vh;
+}
 .sample-contract {
   //height: calc(100vh - 104px);
   height: calc(100vh - 144px);
