--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -1461,13 +1461,11 @@
 
 <div class="footer-determine" style="display: flex; justify-content: space-between">
   <div style="width: 200px;">
-    <button (click)="back($event, 'infor-contract')" type="button" name="next" class="next action-button"
-      style="background-color: #8B8B8B">{{'btn.previous' | translate}}
+    <button (click)="back($event, 'infor-contract')" type="button" name="next" class="next action-button-previous">{{'btn.previous' | translate}}
     </button>
   </div>
   <div>
-    <button (click)="next('save-step')" type="button" name="next" class="next action-button pull-right">{{'btn.next' |
-      translate }}</button>
+    <button (click)="next('save-step')" type="button" name="next" class="next action-button pull-right">{{'btn.next' | translate }}</button>
   </div>
 </div>
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
