--- a/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.scss
@@ -123,23 +123,23 @@ button {
 //style button
 .action-button {
   width: 100px;
-  background: #106DB6;
+  background: #0041C4;
   //font-weight: bold;
   color: white;
   border: 0 none;
-  border-radius: 5px;
+  border-radius: 6px;
   cursor: pointer;
-  padding: 10px 5px;
-  margin: 10px 5px;
+  padding: 10px 12px;
+  margin: 10px 0px;
 }
 
 .draft-button {
   width: 100px;
-  background: #FCAF17;
+  background: #F8AD41;
   //font-weight: bold;
   color: white;
   border: 0 none;
-  border-radius: 5px;
+  border-radius: 6px;
   cursor: pointer;
   padding: 10px 5px;
   margin: 10px 5px;
@@ -149,6 +149,7 @@ button {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding-top: 32vh;
   .content_footer{
     //text-align: center;
     //margin: 10px;
