--- a/src/app/main/contract/add-contract/add-contract.component.scss
+++ b/src/app/main/contract/add-contract/add-contract.component.scss
@@ -2,4 +2,10 @@
     text-align: center;
     font-weight: 500;
     padding: 10px;
-  }
+}
+
+.container-fluid{
+  background-color: #FFFFFF;
+  border-radius: 12px;
+  min-height: 86vh;
+}
