--- a/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.scss
+++ b/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.scss
@@ -119,13 +119,13 @@
   //style button
   .action-button {
     width: 100px;
-    background: #106DB6;
+    background: #0041C4;
     //font-weight: bold;
     color: white;
     border: 0 none;
-    border-radius: 5px;
+    border-radius: 6px;
     cursor: pointer;
-    padding: 10px 5px;
+    padding: 10px 12px;
     margin: 10px 5px;
   }
   
