--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
@@ -279,26 +279,38 @@
 //style button
 .action-button {
   width: 100px;
-  background: #106DB6;
+  background: #0041C4;
   //font-weight: bold;
   color: white;
   border: 0 none;
-  border-radius: 5px;
+  border-radius: 6px;
+  cursor: pointer;
+  padding: 10px 12px;
+  margin: 10px 5px;
+}
+
+.draft-button {
+  width: 100px;
+  background: #F8AD41;
+  //font-weight: bold;
+  color: white;
+  border: 0 none;
+  border-radius: 6px;
   cursor: pointer;
   padding: 10px 5px;
-  margin: 5px 5px;
+  margin: 10px 5px;
 }
 
 .action-button-previous {
   width: 100px;
-  background: #C5C5F1;
+  background: #FFFFFF;
   font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 5px;
+  color: #0041C4;
+  border: 1px solid var(--Primary, #0041C4);
+  border-radius: 6px;
   cursor: pointer;
-  padding: 10px 5px;
-  margin: 5px 5px;
+  padding: 9px 12px;
+  margin: 10px 5px;
 }
 
 .footer-sample-contract {
