--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -1868,8 +1868,7 @@
 
 <div class="footer-determine" style="display: flex; justify-content: space-between">
   <div style="width: 200px;">
-    <button (click)="back($event, 'infor-contract')" type="button" name="next" class="next action-button"
-      style="background-color: #8B8B8B">{{'btn.previous' | translate}}
+    <button (click)="back($event, 'infor-contract')" type="button" name="next" class="next action-button-previous">{{'btn.previous' | translate}}
     </button>
   </div>
   <div>
