--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -144,8 +144,7 @@
 
 <div class="footer-sample-contract">
     <div class="col-md-3">
-        <button (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button"
-            style="background-color: #8B8B8B">{{'btn.previous' | translate}}</button>
+        <button (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button-previous">{{'btn.previous' | translate}}</button>
     </div>
     <div class="col-md-9">
         <div class="center">
@@ -171,8 +170,7 @@
                 </button>
 
                 <div style="position: absolute;right: 5px;margin-top: -35px;">
-                    <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
-                    style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
+                    <button (click)="next('save_draft')" type="button" name="saveDocument" class="next draft-button">{{'btn.save-draft' | translate}}</button>
                     <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
                 </div>
             </a>
