--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -12,7 +12,7 @@
       <div class="search-wrapper">
         <h3>{{title | translate}}</h3>
       </div>
-      <div *ngIf="getShowHideSideBar()">
+      <div *ngIf="getShowHideSideBar()"  style="display: flex;align-items: center;">
         <div ngbDropdown class="d-inline-block">
           <div class="social-icons" ngbDropdownToggle>
             <span class="user_login"></span>
@@ -21,7 +21,7 @@
               <div class="label" style="color: #A8B5CE;">{{phoneCurrentUser}}</div>
             </div>
             <div style="margin-left: 16px;">
-              <img style="width: 24px; height: 24px;" src="../../assets/img/arrow-down.svg"/>
+              <img style="width: 20px; height: 20px;" src="../../assets/img/arrow-down.svg"/>
             </div>
           </div>
 
@@ -92,8 +92,8 @@
         
         <div *ngIf="!this.mobile" ngbDropdown class="d-inline-block">
           <div class="social-icons" ngbDropdownToggle (click)="loadDataNotification()">
-            <i *ngIf="numberNotification == 0" class="pi pi-bell p-mr-4 p-text-secondary"></i>
-            <i *ngIf="numberNotification > 0" class="pi pi-bell p-mr-4 p-text-secondary" pBadge value="{{numberNotification}}"></i>
+            <i *ngIf="numberNotification == 0" class="icon-pi p-mr-4 p-text-secondary"><img src="../../assets/img/bell-filled.svg"></i>
+            <i *ngIf="numberNotification > 0" class="icon-pi p-mr-4 p-text-secondary" pBadge value="{{numberNotification}}"><img src="../../assets/img/bell-filled.svg"></i>
             <!-- <div class="label">{{'notification' | translate }}</div> -->
           </div>
 
